[metadata]
name = torch_mrf
version = 1.0
author = Tom Schierenbeck
author_email = tom_sch@uni-bremen.de
description = Vectorized Markov Random Fields for the GPU with PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.informatik.uni-bremen.de/tom_sch/torch_mrf

[options]
packages = find:
python_requires = >=3.6