[metadata]
name = torch_random_variable
version = 1.0
author = Tom Schierenbeck
author_email = tom_sch@uni-bremen.de
description = Random variables in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.informatik.uni-bremen.de/tom_sch/torch_mrf

[options]
packages = find:
python_requires = >=3.6